# toc4github

./: .flake8  LICENSE  README.md  pyproject.toml  setup.cfg  toc4github.py  tocy.py  utest.py
test/: README.md
